[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6stylekit"
version = "0.1.0"
description = "A simple style kit for PySide6"
authors = [
    { name = "Mitsunori" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]