[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6stylekit"
version = "0.1.2"
description = "A lightweight and extensible styled UI component kit for PySide6 applications."
authors = [
    {name = "Noritama-Lab"}
]
license = {text = "MIT"}
dependencies = [
    "PySide6>=6.0.0"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Repository = "https://github.com/Noritama-Lab/PySide6StyleKit"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["examples*", "tests*"]